Revert "remove test from deploy.yml"
This reverts commit 07f38e4cd5722e7d5bb893828acd7a07edfab782.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,10 @@ jobs:
         run: bun run lint
         continue-on-error: false
 
+      - name: Run tests
+        run: bun test
+        continue-on-error: false
+
       - name: Build application
         run: bun run build
 
