--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,17 @@
-name: Build and Deploy Svelte App
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
+    branches: 'main'
 
 jobs:
-  build-and-test:
+  build_site:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Bun
+      - name: Install Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
@@ -22,91 +19,30 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Run type checking (if using TypeScript)
-        run: bun run check
-        continue-on-error: false
-
-      - name: Run linting
-        run: bun run lint
-        continue-on-error: false
-
-      - name: Build application
+      - name: Build
+        env:
+          BASE_PATH: '/${{ github.event.repository.name }}'
         run: bun run build
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: svelte-build
-          path: build/
-          retention-days: 30
+          # Este caminho deve corresponder à opção `pages` nas suas configurações do adapter-static
+          path: 'build/'
 
   deploy:
-    needs: build-and-test
+    needs: build_site
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Build for production
-        run: bun run build
-
-    # Deploy to GitHub Pages (uncomment if needed)
-    # - name: Deploy to GitHub Pages
-    #   uses: peaceiris/actions-gh-pages@v3
-    #   with:
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
-    #     publish_dir: ./build
-
-    # Deploy to Vercel (uncomment if needed)
-    # - name: Deploy to Vercel
-    #   uses: vercel/action@v1
-    #   with:
-    #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
-    #     vercel-org-id: ${{ secrets.ORG_ID }}
-    #     vercel-project-id: ${{ secrets.PROJECT_ID }}
-
-    # Deploy to Netlify (uncomment if needed)
-    # - name: Deploy to Netlify
-    #   uses: nwtgck/actions-netlify@v3.0
-    #   with:
-    #     publish-dir: './build'
-    #     production-branch: main
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
-    #     deploy-message: "Deploy from GitHub Actions"
-    #     enable-pull-request-comment: false
-    #     enable-commit-comment: true
-    #     overwrites-pull-request-comment: true
-    #   env:
-    #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-    #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-
-  # Optional: Security scanning
-  security-scan:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Run security audit
-        run: bun audit
-        continue-on-error: true
+      - name: Deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
